--- a/20110319_CustomTab/res/layout/tabwidget.xml
+++ b/20110319_CustomTab/res/layout/tabwidget.xml
@@ -9,13 +9,13 @@
     android:background="@drawable/tab"
     >
     <ImageView
-        android:id="@+id/imageview"
+        android:id="@+id/icon"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/ic_tab_1"
         />
     <TextView
-        android:id="@+id/textview"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
