--- a/20110628_DividedLayout/res/layout/aaa.xml
+++ b/20110628_DividedLayout/res/layout/aaa.xml
@@ -16,6 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
             />
         <TextView
             android:id="@+id/aaa_digit"
